# gitrx

./: .gitignore  .oxlintrc.json  CLAUDE.md  LICENSE  README.md  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/skills/arktype/: SKILL.md
.claude/skills/rust-errors/: SKILL.md
.claude/skills/ship/: SKILL.md
.claude/skills/tauri/: SKILL.md
.claude/skills/testing/: SKILL.md
.claude/skills/testing/references/: honest-tests.md  setup-pattern.md  test-deletion-grill.md  test-structure.md  type-testing.md
.claude/skills/tsconfig/: SKILL.md
.claude/skills/typescript/: SKILL.md
.claude/skills/typescript/references/: advanced-typescript-features.md  factory-patterns.md  project-conventions.md  runtime-schema-patterns.md  testing-patterns.md  type-organization.md  type-safety-and-control-flow.md
.claude/skills/verify-all/: SKILL.md
.github/workflows/: auto-release.yml  ci.yml  release.yml
scripts/: gitrx  install-cli.sh  make-fixture-repo.sh  render-icon.ts
src/: App.css  App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli_install.rs  commands.rs  context_menu.rs  error.rs  image.rs  lib.rs  logging.rs  main.rs  menu.rs  state.rs  test_support.rs  watch.rs  windows.rs
src-tauri/src/git/: apply.rs  commit.rs  diff.rs  mod.rs  patch.rs  paths.rs  repo.rs  stage.rs
src-tauri/tests/: hunk_staging.rs
src/api/: git.ts
src/components/: CommitPanel.test.tsx  CommitPanel.tsx  ContextSlider.tsx  DiffLineRow.test.tsx  DiffLineRow.tsx  DiffViewer.test.tsx  DiffViewer.tsx  FileList.test.tsx  FileList.tsx  FileRow.test.tsx  FileRow.tsx  HeaderBar.tsx  HunkView.test.tsx  HunkView.tsx  ThemeToggle.tsx  Toasts.tsx  VirtualDiff.tsx
src/highlight/: shiki.test.ts  shiki.ts  tokyowhale.test.ts  tokyowhale.ts  useDiffHighlight.ts
src/hooks/: useFileListKeyboardNav.ts
src/lib/: deepEqual.test.ts  deepEqual.ts  errors.test.ts  errors.ts  hunkPayload.test.ts  hunkPayload.ts  log.ts
src/store/: useAppStore.commit.test.ts  useAppStore.selection.test.ts  useAppStore.test.ts  useAppStore.testkit.ts  useAppStore.ts  useAppStore.watcher.test.ts
src/styles/: diff.css
src/test/: factories.ts  setup.ts
src/types/: ipc.ts
