[package]
name = "rust-gitx"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rust_gitx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
git2 = "0.19"
notify = "6"
base64 = "0.22"
trash = "5"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "process", "sync", "time"] }

[dev-dependencies]
tempfile = "3"

# Aggressive, user-mandated clippy policy. Every `allow` below is justified.
# Zero-warnings doctrine: severities are `deny` AT THE SOURCE so a bare
# `cargo build`/`cargo clippy` fails on any finding — the gate's `-D warnings`
# flag is redundant belt-and-suspenders, not the only enforcement.
[lints.rust]
warnings = { level = "deny", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

# This is an internal (non-published) crate: every fallible fn returns the crate's
# uniform `AppResult`/`AppError` (or a Tauri `Result<_, String>`), so per-fn
# `# Errors`/`# Panics` doc sections would be pure churn with no reader value.
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Git domain vocabulary: `path`, `patch`, and `idx` are distinct, standard git
# concepts that this lint flags as "too similar". Renaming them to satisfy the
# lint would make the code less clear, not more.
similar_names = "allow"
# Nursery lint that is known to be unreliable (its lock-scope rewrites are noisy
# and, on lock-guard-heavy paths like window teardown, actively misleading).
significant_drop_tightening = "allow"

